# CMake-Tutorial

./: .gitignore  LICENSE  README.md
demos/commands/find_package/: CMakeLists.txt
demos/commands/project_1/: CMakeLists.txt
demos/commands/set/: CMakeLists.txt
demos/deb/official_demo/: CMakeLists.txt  DistanceBetweenPoints.cxx
demos/directives/project_1/: CMakeLists.txt
demos/qt/uic/: CMakeLists.txt  main.cpp  main.h
develop/: README.md
manuals/commands/: cmake_minimum_required.md  find_package.md  project.md  set.md
manuals/directives/: cmake_minimum_required.md  project.md  set.md
tests/: CMakeLists.txt
tutorials/: installation.md  package.md
